src/objects/Match_Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Status__c</fullName>
        <label>Appointment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buyer_Comments__c</fullName>
        <label>Buyer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Buyer_Ticket__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Buyer Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>Match_Appointments_Buyer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirm_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Confirm User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Match_Appointments1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invite_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invite User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipName>Match_Appointments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Slot__c</fullName>
        <label>Meeting Slot</label>
        <referenceTo>Meeting_Slot__c</referenceTo>
        <relationshipName>Match_Appointments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seller_Comments__c</fullName>
        <label>Seller Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seller_Ticket__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Seller Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>Match_Appointments_Seller</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>BLN Match Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APPT-{000000}</displayFormat>
        <label>Match Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Match Appointments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>